--- a/public/themes/custom/css/wave.css
+++ b/public/themes/custom/css/wave.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.0.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.0.2 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -380,7 +380,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.-translate-x-full, .translate-y-full, .translate-y-0, .translate-y-2, .translate-y-4, .-translate-x-1\/2, .-translate-y-1, .translate-y-12, .translate-x-12, .translate-x-0, .-rotate-180, .-rotate-3, .scale-95, .scale-100, .scale-110, .transform, .hover\:-translate-y-1, .group-hover\:translate-y-0, .group-hover\:translate-y-1, .group-hover\:-translate-x-0\.5, .group-hover\:-translate-x-0, .group-hover\:rotate-3, .group-hover\:scale-110, .sm\:translate-y-0, .sm\:translate-x-2, .sm\:translate-x-0, .sm\:scale-95, .sm\:scale-100, .lg\:translate-x-0 {
+*, ::before, ::after {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -389,21 +389,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.divide-x > *, .divide-y > *, .divide-y-2 > *, .border, .border-2, .border-0, .border-4, .border-b, .border-r, .border-t, .border-l, .border-b-2, .form-control, .form-input, .form-textarea, .form-select, .hover\:border-l-2, .sm\:border-b {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.shadow-sm, .shadow-lg, .shadow-xl, .shadow-md, .shadow {
-  --tw-ring-offset-shadow: 0 0 #0000;
-  --tw-ring-shadow: 0 0 #0000;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-}
-
-.ring, .form-control, .form-input, .form-textarea, .form-select, .focus\:ring-4, .focus\:ring {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
@@ -412,9 +399,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-}
-
-.blur, .invert, .sepia, .filter {
   --tw-blur: var(--tw-empty,/*!*/ /*!*/);
   --tw-brightness: var(--tw-empty,/*!*/ /*!*/);
   --tw-contrast: var(--tw-empty,/*!*/ /*!*/);
@@ -2594,12 +2578,15 @@ select {
 .italic {
   font-style: italic;
 }
-.ordinal {
+*, ::before, ::after {
+  --tw-ordinal: var(--tw-empty,/*!*/ /*!*/);
   --tw-slashed-zero: var(--tw-empty,/*!*/ /*!*/);
   --tw-numeric-figure: var(--tw-empty,/*!*/ /*!*/);
   --tw-numeric-spacing: var(--tw-empty,/*!*/ /*!*/);
   --tw-numeric-fraction: var(--tw-empty,/*!*/ /*!*/);
   --tw-font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
+}
+.ordinal {
   --tw-ordinal: ordinal;
   font-variant-numeric: var(--tw-font-variant-numeric);
 }
