--- a/public/themes/custom/css/wave.css
+++ b/public/themes/custom/css/wave.css
@@ -380,7 +380,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.-translate-x-full, .translate-y-full, .translate-y-0, .translate-y-2, .translate-y-4, .-translate-x-1\/2, .-translate-y-1, .translate-y-12, .translate-x-12, .translate-x-0, .-rotate-180, .-rotate-3, .scale-95, .scale-100, .scale-110, .transform, .hover\:-translate-y-1, .group-hover\:translate-y-0, .group-hover\:translate-y-1, .group-hover\:-translate-x-0\.5, .group-hover\:-translate-x-0, .group-hover\:rotate-3, .group-hover\:scale-110, .sm\:translate-y-0, .sm\:translate-x-2, .sm\:translate-x-0, .sm\:scale-95, .sm\:scale-100, .lg\:translate-x-0 {
+.-translate-x-full, .translate-y-full, .translate-y-0, .-translate-y-1, .translate-y-12, .translate-y-2, .translate-y-4, .-translate-x-1\/2, .translate-x-12, .translate-x-0, .-rotate-180, .-rotate-3, .scale-110, .scale-100, .scale-95, .transform, .hover\:-translate-y-1, .group-hover\:translate-y-0, .group-hover\:translate-y-1, .group-hover\:-translate-x-0\.5, .group-hover\:-translate-x-0, .group-hover\:rotate-3, .group-hover\:scale-110, .sm\:translate-y-0, .sm\:translate-x-2, .sm\:translate-x-0, .sm\:scale-95, .sm\:scale-100, .lg\:translate-x-0 {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -591,6 +591,20 @@ select {
 
 [type='file']:focus {
   outline: 1px auto -webkit-focus-ring-color;
+}
+  h1 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+  h2 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+  h3 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .container {
   width: 100%;
@@ -1193,6 +1207,10 @@ select {
   margin-left: 0px;
   margin-right: 0px;
 }
+.-my-2 {
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
+}
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -1220,10 +1238,6 @@ select {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-.-my-2 {
-  margin-top: -0.5rem;
-  margin-bottom: -0.5rem;
 }
 .my-5 {
   margin-top: 1.25rem;
@@ -1290,11 +1304,17 @@ select {
 .-mt-10 {
   margin-top: -2.5rem;
 }
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.ml-4 {
+  margin-left: 1rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -1308,6 +1328,9 @@ select {
 .mr-3 {
   margin-right: 0.75rem;
 }
+.-mr-2 {
+  margin-right: -0.5rem;
+}
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -1320,14 +1343,8 @@ select {
 .-ml-px {
   margin-left: -1px;
 }
-.ml-4 {
-  margin-left: 1rem;
-}
 .-mt-1 {
   margin-top: -0.25rem;
-}
-.mt-1 {
-  margin-top: 0.25rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -1349,9 +1366,6 @@ select {
 }
 .mt-7 {
   margin-top: 1.75rem;
-}
-.-mr-2 {
-  margin-right: -0.5rem;
 }
 .ml-0\.5 {
   margin-left: 0.125rem;
@@ -1458,6 +1472,9 @@ select {
 .h-10 {
   height: 2.5rem;
 }
+.h-8 {
+  height: 2rem;
+}
 .h-1\/3 {
   height: 33.333333%;
 }
@@ -1466,9 +1483,6 @@ select {
 }
 .h-1 {
   height: 0.25rem;
-}
-.h-8 {
-  height: 2rem;
 }
 .h-24 {
   height: 6rem;
@@ -1487,6 +1501,9 @@ select {
 }
 .h-0 {
   height: 0px;
+}
+.h-\[500px\] {
+  height: 500px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1566,6 +1583,9 @@ select {
 .max-w-lg {
   max-width: 32rem;
 }
+.max-w-6xl {
+  max-width: 72rem;
+}
 .max-w-md {
   max-width: 28rem;
 }
@@ -1580,9 +1600,6 @@ select {
 }
 .max-w-xl {
   max-width: 36rem;
-}
-.max-w-6xl {
-  max-width: 72rem;
 }
 .max-w-2xl {
   max-width: 42rem;
@@ -1626,6 +1643,14 @@ select {
   --tw-translate-y: 0px;
   transform: var(--tw-transform);
 }
+.-translate-y-1 {
+  --tw-translate-y: -0.25rem;
+  transform: var(--tw-transform);
+}
+.translate-y-12 {
+  --tw-translate-y: 3rem;
+  transform: var(--tw-transform);
+}
 .translate-y-2 {
   --tw-translate-y: 0.5rem;
   transform: var(--tw-transform);
@@ -1636,14 +1661,6 @@ select {
 }
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
-  transform: var(--tw-transform);
-}
-.-translate-y-1 {
-  --tw-translate-y: -0.25rem;
-  transform: var(--tw-transform);
-}
-.translate-y-12 {
-  --tw-translate-y: 3rem;
   transform: var(--tw-transform);
 }
 .translate-x-12 {
@@ -1662,9 +1679,9 @@ select {
   --tw-rotate: -3deg;
   transform: var(--tw-transform);
 }
-.scale-95 {
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: var(--tw-transform);
 }
 .scale-100 {
@@ -1672,9 +1689,9 @@ select {
   --tw-scale-y: 1;
   transform: var(--tw-transform);
 }
-.scale-110 {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
+.scale-95 {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
   transform: var(--tw-transform);
 }
 .transform {
@@ -1777,6 +1794,11 @@ select {
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
   margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-2\.5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.625rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1786,6 +1808,11 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1797,20 +1824,10 @@ select {
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
-.space-x-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -1975,6 +1992,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(168 85 247 / var(--tw-border-opacity));
 }
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
 .border-wave-400 {
   --tw-border-opacity: 1;
   border-color: rgb(77 150 255 / var(--tw-border-opacity));
@@ -1987,10 +2008,6 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
 .border-gray-50 {
   --tw-border-opacity: 1;
   border-color: rgb(249 250 251 / var(--tw-border-opacity));
@@ -1999,17 +2016,20 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
+.border-\[\#cecece8c\] {
+  border-color: #cecece8c;
+}
 .border-red-400 {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
 .border-teal-400 {
   --tw-border-opacity: 1;
   border-color: rgb(45 212 191 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -2161,6 +2181,10 @@ select {
   --tw-gradient-from: #3b82f6;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(59 130 246 / 0));
 }
+.from-wkid-pink {
+  --tw-gradient-from: #f30060;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(243 0 96 / 0));
+}
 .from-blue-600 {
   --tw-gradient-from: #2563eb;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(37 99 235 / 0));
@@ -2182,6 +2206,9 @@ select {
 }
 .to-indigo-600 {
   --tw-gradient-to: #4f46e5;
+}
+.to-wkid-blue {
+  --tw-gradient-to: #0081ff;
 }
 .to-wave-400 {
   --tw-gradient-to: #4D96FF;
@@ -2212,6 +2239,9 @@ select {
 .p-10 {
   padding: 2.5rem;
 }
+.p-2 {
+  padding: 0.5rem;
+}
 .p-6 {
   padding: 1.5rem;
 }
@@ -2220,9 +2250,6 @@ select {
 }
 .p-8 {
   padding: 2rem;
-}
-.p-2 {
-  padding: 0.5rem;
 }
 .p-3 {
   padding: 0.75rem;
@@ -2273,13 +2300,17 @@ select {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 .py-6 {
   padding-top: 1.5rem;
@@ -2304,10 +2335,6 @@ select {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
-}
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 .py-20 {
   padding-top: 5rem;
@@ -2352,6 +2379,9 @@ select {
 .pt-14 {
   padding-top: 3.5rem;
 }
+.pt-16 {
+  padding-top: 4rem;
+}
 .pt-7 {
   padding-top: 1.75rem;
 }
@@ -2390,9 +2420,6 @@ select {
 }
 .pt-1 {
   padding-top: 0.25rem;
-}
-.pt-16 {
-  padding-top: 4rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -2487,6 +2514,10 @@ select {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -2494,10 +2525,6 @@ select {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -2520,11 +2547,11 @@ select {
 .font-semibold {
   font-weight: 600;
 }
-.font-extrabold {
-  font-weight: 800;
-}
 .font-thin {
   font-weight: 100;
+}
+.font-extrabold {
+  font-weight: 800;
 }
 .font-normal {
   font-weight: 400;
@@ -2635,6 +2662,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(219 234 254 / var(--tw-text-opacity));
 }
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -2646,10 +2677,6 @@ select {
 .text-wave-600 {
   --tw-text-opacity: 1;
   color: rgb(0 95 230 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-blue-400 {
   --tw-text-opacity: 1;
@@ -2695,6 +2722,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity));
 }
+.text-wkid-red {
+  --tw-text-opacity: 1;
+  color: rgb(225 29 0 / var(--tw-text-opacity));
+}
 .text-indigo-500 {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
@@ -2730,10 +2761,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
 }
-.text-blue-200 {
-  --tw-text-opacity: 1;
-  color: rgb(191 219 254 / var(--tw-text-opacity));
-}
 .text-teal-700 {
   --tw-text-opacity: 1;
   color: rgb(15 118 110 / var(--tw-text-opacity));
@@ -2741,6 +2768,10 @@ select {
 .text-teal-600 {
   --tw-text-opacity: 1;
   color: rgb(13 148 136 / var(--tw-text-opacity));
+}
+.text-blue-200 {
+  --tw-text-opacity: 1;
+  color: rgb(191 219 254 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration: underline;
@@ -2886,6 +2917,9 @@ select {
 .duration-150 {
   transition-duration: 150ms;
 }
+.duration-1000 {
+  transition-duration: 1000ms;
+}
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -2894,9 +2928,6 @@ select {
 }
 .duration-75 {
   transition-duration: 75ms;
-}
-.duration-1000 {
-  transition-duration: 1000ms;
 }
 .duration-700 {
   transition-duration: 700ms;
@@ -2913,8 +2944,31 @@ select {
 .\[IPv6\:\'\.\$domain\.\'\] {
   -i-pv6: '.$domain.';
 }
+@font-face {
+  font-family: HussarBold;
+  src: url("../../../fonts/HussarBoldWebEdition-xq5O.otf");
+}
+@font-face {
+  font-family: PolandBig;
+  src: url("fonts/PolandCanIntoBigWritings-18wL.otf");
+}
+@font-face {
+  font-family: PolandBigOutline;
+  src: url("fonts/PolandCanIntoBigWritingsOutline-B9RV.otf");
+}
 [x-cloak] {
   display: none;
+}
+
+/****** Standard Elements **********/
+h1, h2, h3, h4, h5, h6 {
+  font-family: HussarBold;
+}
+
+.gradient-border-b {
+  padding-bottom: 2px;
+  background: linear-gradient(to right, #e11d00, #0081ff) left bottom #fff no-repeat;
+  background-size: 100% 2px;
 }
 
 svg {
@@ -3113,6 +3167,11 @@ svg {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-wave-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 105 255 / var(--tw-bg-opacity));
@@ -3121,11 +3180,6 @@ svg {
 .hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-blue-100:hover {
@@ -3176,6 +3230,11 @@ svg {
   color: rgb(0 95 230 / var(--tw-text-opacity));
 }
 
+.hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -3196,11 +3255,6 @@ svg {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
 .hover\:text-wave-500:hover {
   --tw-text-opacity: 1;
   color: rgb(0 105 255 / var(--tw-text-opacity));
@@ -3209,6 +3263,11 @@ svg {
 .hover\:text-indigo-600:hover {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .hover\:text-blue-600:hover {
@@ -3291,14 +3350,14 @@ svg {
   border-color: rgb(0 95 230 / var(--tw-border-opacity));
 }
 
-.focus\:bg-blue-200:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
-
 .focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-blue-200:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .focus\:bg-blue-600:focus {
@@ -4721,14 +4780,14 @@ svg {
     padding-right: 0px;
   }
 
-  .xl\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
   .xl\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+
+  .xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .xl\:px-2 {
