Fixed guest header, fixed fonts

--- a/resources/views/themes/custom/assets/sass/_fonts.scss
+++ b/resources/views/themes/custom/assets/sass/_fonts.scss
@@ -5,10 +5,10 @@
 
 @font-face {
     font-family: PolandBig;
-    src: url('fonts/PolandCanIntoBigWritings-18wL.otf');
+    src: url('../../../fonts/PolandCanIntoBigWritings-18wL.otf');
 }
 
 @font-face {
     font-family: PolandBigOutline;
-    src: url('fonts/PolandCanIntoBigWritingsOutline-B9RV.otf');
+    src: url('../../../fonts/PolandCanIntoBigWritingsOutline-B9RV.otf');
 }
