--- a/public/themes/custom/css/wave.css
+++ b/public/themes/custom/css/wave.css
@@ -1199,6 +1199,14 @@ select {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
 .mx-0\.5 {
   margin-left: 0.125rem;
   margin-right: 0.125rem;
@@ -1210,14 +1218,6 @@ select {
 .-my-2 {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
-}
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
 }
 .my-12 {
   margin-top: 3rem;
@@ -1301,6 +1301,15 @@ select {
 .ml-0 {
   margin-left: 0px;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
+.mt-12 {
+  margin-top: 3rem;
+}
 .-mt-10 {
   margin-top: -2.5rem;
 }
@@ -1330,15 +1339,6 @@ select {
 }
 .-mr-2 {
   margin-right: -0.5rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
-}
-.mr-4 {
-  margin-right: 1rem;
-}
-.mt-12 {
-  margin-top: 3rem;
 }
 .-ml-px {
   margin-left: -1px;
@@ -1466,20 +1466,20 @@ select {
 .h-3 {
   height: 0.75rem;
 }
-.h-14 {
-  height: 3.5rem;
-}
-.h-10 {
-  height: 2.5rem;
-}
-.h-8 {
-  height: 2rem;
-}
 .h-1\/3 {
   height: 33.333333%;
 }
 .h-48 {
   height: 12rem;
+}
+.h-10 {
+  height: 2.5rem;
+}
+.h-14 {
+  height: 3.5rem;
+}
+.h-8 {
+  height: 2rem;
 }
 .h-1 {
   height: 0.25rem;
@@ -1538,14 +1538,14 @@ select {
 .w-1 {
   width: 0.25rem;
 }
-.w-14 {
-  width: 3.5rem;
-}
 .w-auto {
   width: auto;
 }
 .w-10 {
   width: 2.5rem;
+}
+.w-14 {
+  width: 3.5rem;
 }
 .w-0 {
   width: 0px;
@@ -1906,11 +1906,11 @@ select {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.rounded {
-  border-radius: 0.25rem;
-}
 .rounded-lg {
   border-radius: 0.5rem;
+}
+.rounded {
+  border-radius: 0.25rem;
 }
 .rounded-xl {
   border-radius: 0.8rem;
@@ -2059,6 +2059,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(0 105 255 / var(--tw-bg-opacity));
 }
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .bg-wave-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(0 95 230 / var(--tw-bg-opacity));
@@ -2070,14 +2078,6 @@ select {
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
-}
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-indigo-400 {
   --tw-bg-opacity: 1;
@@ -2236,14 +2236,14 @@ select {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.p-6 {
+  padding: 1.5rem;
+}
 .p-10 {
   padding: 2.5rem;
 }
 .p-2 {
   padding: 0.5rem;
-}
-.p-6 {
-  padding: 1.5rem;
 }
 .p-5 {
   padding: 1.25rem;
@@ -2292,17 +2292,17 @@ select {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .py-10 {
   padding-top: 2.5rem;
@@ -2376,6 +2376,9 @@ select {
 .pb-20 {
   padding-bottom: 5rem;
 }
+.pt-8 {
+  padding-top: 2rem;
+}
 .pt-14 {
   padding-top: 3.5rem;
 }
@@ -2396,9 +2399,6 @@ select {
 }
 .pb-4 {
   padding-bottom: 1rem;
-}
-.pt-8 {
-  padding-top: 2rem;
 }
 .pr-0\.5 {
   padding-right: 0.125rem;
@@ -2514,21 +2514,21 @@ select {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -2547,11 +2547,11 @@ select {
 .font-semibold {
   font-weight: 600;
 }
-.font-thin {
-  font-weight: 100;
-}
 .font-extrabold {
   font-weight: 800;
+}
+.font-thin {
+  font-weight: 100;
 }
 .font-normal {
   font-weight: 400;
@@ -2589,20 +2589,20 @@ select {
 .leading-6 {
   line-height: 1.5rem;
 }
+.leading-9 {
+  line-height: 2.25rem;
+}
+.leading-7 {
+  line-height: 1.75rem;
+}
+.leading-5 {
+  line-height: 1.25rem;
+}
 .leading-none {
   line-height: 1;
 }
 .leading-tight {
   line-height: 1.25;
-}
-.leading-7 {
-  line-height: 1.75rem;
-}
-.leading-9 {
-  line-height: 2.25rem;
-}
-.leading-5 {
-  line-height: 1.25rem;
 }
 .leading-4 {
   line-height: 1rem;
@@ -2613,11 +2613,11 @@ select {
 .leading-10 {
   line-height: 2.5rem;
 }
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
@@ -2658,13 +2658,21 @@ select {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-blue-100 {
-  --tw-text-opacity: 1;
-  color: rgb(219 234 254 / var(--tw-text-opacity));
-}
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+.text-blue-100 {
+  --tw-text-opacity: 1;
+  color: rgb(219 234 254 / var(--tw-text-opacity));
 }
 .text-gray-800 {
   --tw-text-opacity: 1;
@@ -2681,14 +2689,6 @@ select {
 .text-blue-400 {
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity));
-}
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.text-blue-700 {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 .text-indigo-400 {
   --tw-text-opacity: 1;
@@ -2950,11 +2950,11 @@ select {
 }
 @font-face {
   font-family: PolandBig;
-  src: url("fonts/PolandCanIntoBigWritings-18wL.otf");
+  src: url("../../../fonts/PolandCanIntoBigWritings-18wL.otf");
 }
 @font-face {
   font-family: PolandBigOutline;
-  src: url("fonts/PolandCanIntoBigWritingsOutline-B9RV.otf");
+  src: url("../../../fonts/PolandCanIntoBigWritingsOutline-B9RV.otf");
 }
 [x-cloak] {
   display: none;
@@ -3619,12 +3619,12 @@ svg {
     margin-bottom: 2.5rem;
   }
 
-  .sm\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .sm\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .sm\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .sm\:mt-6 {
@@ -4780,14 +4780,14 @@ svg {
     padding-right: 0px;
   }
 
-  .xl\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
   .xl\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }
+
+  .xl\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
   .xl\:px-2 {
