--- a/public/themes/custom/css/wave.css
+++ b/public/themes/custom/css/wave.css
@@ -1794,6 +1794,9 @@ select {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-row-reverse {
   flex-direction: row-reverse;
 }
@@ -1832,6 +1835,9 @@ select {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-y-16 {
   row-gap: 4rem;
