--- a/public/wave/css/admin.css
+++ b/public/wave/css/admin.css
@@ -1,3 +1,8 @@
 .voyager .navbar.navbar-default .navbar-header .navbar-brand, .voyager .navbar .navbar-header .navbar-brand{
     background: #046afe;
 }
+
+.show {
+    display: block !important;
+    opacity: 1;
+}
