--- a/resources/views/themes/custom/assets/sass/wave.scss
+++ b/resources/views/themes/custom/assets/sass/wave.scss
@@ -24,6 +24,12 @@
   --wkid-purple: #d810b1;
   --wkid-indigo: #805def;
   --wkid-blue: #0081ff;
+
+  --wkid-red: #aa1700;
+  --wkid-pink: #ad0246;
+  --wkid-purple: #9c1c83;
+  --wkid-indigo: #5b3cc2;
+  --wkid-blue-dark: #0f5ead;
 }
 
 [x-cloak]{
