Added Ubuntu font

--- a/resources/views/themes/custom/assets/sass/_fonts.scss
+++ b/resources/views/themes/custom/assets/sass/_fonts.scss
@@ -12,3 +12,8 @@
     font-family: PolandBigOutline;
     src: url('../../../fonts/PolandCanIntoBigWritingsOutline-B9RV.otf');
 }
+
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../../../fonts/Ubuntu-Regular.ttf') format('ttf');
+}
