--- a/resources/views/themes/custom/assets/sass/wave.scss
+++ b/resources/views/themes/custom/assets/sass/wave.scss
@@ -128,6 +128,18 @@ h6 {
     color: var(--wkid-red);
   }
 }
+#header.fixed:not(.detatched) {
+  & .header-icon button {
+    color:white;
+    &:hover {
+      background: #ffffff3d;
+    }
+    &:focus {
+      color: #1f2937;
+      background: white;
+    }
+  }
+}
 
 svg {
   width: 100%;
