--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,3 +4,39 @@
   margin-left: 5px;
   cursor: pointer;
 }
+
+.no-profile-img {
+  float: left;
+  border-radius: 50%;
+  margin-right: 10px;
+  background-color: #046afe;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+.no-profile-img.small {
+  font-size: 20px;
+  height: 40px;
+  width: 40px;
+}
+.no-profile-img.large {
+  font-size: 30px;
+  height: 60px;
+  width: 60px;
+}
+
+.profile .dropdown-toggle img {
+  height: 40px;
+  width: 40px;
+}
+
+.profile-body {
+  text-align: left;
+}
+
+.nav.navbar-nav .dropdown-toggle {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+}
