--- a/resources/views/themes/custom/assets/sass/wave.scss
+++ b/resources/views/themes/custom/assets/sass/wave.scss
@@ -116,7 +116,7 @@ h6 {
 .gradient-border-b,
 #header.detatched {
   padding-bottom: 2px;
-  background: linear-gradient(to right, var(--wkid-red), var(--wkid-blue)) left bottom #fff no-repeat;
+  background: linear-gradient(to right, var(--wkid-pink), var(--wkid-blue)) left bottom #fff no-repeat;
   background-size: 100% 2px;
 }
 
